# event_based_optical_flow

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: mvsec_indoor_burgers.yaml  mvsec_indoor_no_timeaware.yaml
datasets/: README.md
outputs/: .gitkeep
src/: event_image_converter.py  feature_calculator.py  visualizer.py  warp.py
src/costs/: __init__.py  base.py  gradient_magnitude.py  hybrid.py  image_variance.py  multi_focal_normalized_gradient_magnitude.py  multi_focal_normalized_image_variance.py  normalized_gradient_magnitude.py  normalized_image_variance.py  total_variation.py
src/data_loader/: __init__.py  base.py  mvsec.py
src/solver/: __init__.py  base.py  patch_contrast_base.py  patch_contrast_mixed.py  patch_contrast_pyramid.py  time_aware_patch_contrast.py
src/solver/nnmodels/: __init__.py  basic_layers.py  ev_flownet.py
src/solver/scipy_autograd/: README.md  __init__.py  base_wrapper.py  scipy_minimize.py  torch_wrapper.py
src/types/: __init__.py  flow_patch.py
src/utils/: __init__.py  event_utils.py  flow_utils.py  misc.py  stat_utils.py
tests/: test_event_image_converter.py  test_warp.py
tests/costs/: test_gradient_magnitude.py  test_hybrid.py  test_image_variance.py
tests/utils/: test_event_utils.py  test_flow_utils.py
